csrc/tests/codegen_probes/errors/err_letsubstr_lhs_nonstring.bas
' REJECT: LHS string-slice assignment onto a non-string variable.
' zxbparser p_let_substr:1266 syntax_error_expected_string (target not string).
Dim n As Integer
n(1 To 2) = "x"
